# demo-rpg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/demo_rpg/: armor.h  character_stats.h  cleric.h  core_stats.h  game_play.h  item.h  item_manager.h  level_system.h  monster.h  player_character.h  player_character_delegate.h  potion.h  random.h  rogue.h  tests.h  types.h  warrior.h  weapon.h
info/: about.txt  design.md  design.txt  dev_notes.md  dev_questions.md  project_structure.txt
src/: ability.cpp  armor.cpp  buff.cpp  character.h  character_stats.cpp  character_stats.h  cleric.cpp  cleric.h  core_stats.cpp  game_play.cpp  item.cpp  item_manager.cpp  level_system.cpp  level_system.h  main.cpp  monster.cpp  player_character.cpp  player_character_delegate.cpp  player_character_delegate.h  player_classes.h  point_stack.cpp  potion.cpp  random.cpp  rogue.cpp  rogue.h  stat_block.h  stat_types.h  tests.cpp  tests.h  warrior.cpp  warrior.h  weapon.cpp  wizard.cpp  wizard.h
src/headers/: ability.h  armor.h  buff.h  character_stats.h  core_stats.h  equipment.h  item.cpp  item.h  item_manager.h  level_system.h  player_character.h  player_character_delegate.h  player_classes.h  point_stack.h  tests.h  types.h  weapon.h  wizard.h
tests/: CMakeLists.txt  core_characteristics_test.cpp  equipment_test.cpp  item_classes_test.cpp  monster_battle_test.cpp  player_classes_test.cpp
